add category creation UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   loading_animation_widget: ^1.2.0+2
   percent_indicator: ^4.2.2
   modal_bottom_sheet: ^2.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
