--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   loading_animation_widget: ^1.2.0+2
   percent_indicator: ^4.2.2
   intl: ^0.17.0
+  firebase_auth: ^3.6.2
+  firebase_core: ^1.20.0
 
 dev_dependencies:
   flutter_test:
