--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.17.0
   firebase_auth: ^3.6.2
   firebase_core: ^1.20.0
+  cloud_firestore: ^3.4.3
 
 dev_dependencies:
   flutter_test:
