--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.3
   modal_progress_hud_nsn: ^0.2.1
   loading_animation_widget: ^1.2.0+2
+  email_validator: ^2.0.1
   percent_indicator: ^4.2.2
   intl: ^0.17.0
   firebase_auth: ^3.6.2
