--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_core: ^1.20.0
   cloud_firestore: ^3.4.3
   shared_preferences: ^2.0.15
+  dropdown_textfield: ^1.0.3
+  date_time_picker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
